--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="email_label">Email</string>
     <string name="password_label">Password</string>
     <string name="login_button">Login</string>
+    <string name="enter_weight">Enter weight (kg)</string>
+    <string name="enter_height">Enter height (m)</string>
+    <string name="calculate">Calculate</string>
+    <string name="correct_weight">The patient is at a healthy weight</string>
+    <string name="incorrect_weight">The patient is NOT at a healthy weight</string>
+    <string name="invalid_input">Invalid input</string>
 </resources>
