--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -11,4 +11,7 @@
     <string name="correct_weight">The patient is at a healthy weight</string>
     <string name="incorrect_weight">The patient is NOT at a healthy weight</string>
     <string name="invalid_input">Invalid input</string>
+    <string name="celsius">Celsius temperature</string>
+    <string name="conversion">Convert</string>
+    <string name="fahrenheit">Fahrenheit temperature:</string>
 </resources>
